added logic to prevent empty buttons

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!-- Search option -->
     <form class="form-inline" id="marvelSearch">
       <div class="form-group">
-        <label for="marvelInput">Search for a Marvel character</label>
+        <label for="marvelInput">Search/Add Marvel character</label>
         <input type="text" id="marvelInput">
       </div>
       <!-- Buttons added and remove options -->
-      <input id="addShow" type="submit" value="submit">
+      <input id="addShow" type="submit" value="Add">
       <input id="removeGif" type="submit" value="Remove last Entry">	
     </form>
 
